# play-store-mcp

./: .codacy.yaml  .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FEATURE_SUMMARY.md  LICENSE  README.md  SECURITY.md  TESTING.md  VERIFICATION.md  mkdocs.yml  pyproject.toml  run_integration_tests.sh  run_tests.sh  test_live_api.py
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  discord-notifications.yml  docker.yml  docs.yml  qlty-coverage.yml  release.yml  safety.yml  scorecard.yml  snyk.yml  sonarcloud.yml  stale.yml
.qlty/: qlty.toml
docs/: changelog.md  configuration.md  getting-started.md  index.md  remote-credentials.md  tools-reference.md  troubleshooting.md
docs/superpowers/plans/: 2026-07-01-product-purchases.md  2026-07-01-purchase-management.md  2026-07-01-read-only-flag.md  2026-07-01-read-siblings.md  2026-07-03-migrate-to-fastmcp-v3.md  2026-07-04-code-mode-flag.md  2026-07-06-deferred-audit-backlog.md
docs/tools/: batch.md  publishing.md  reviews.md  store-listings.md  subscriptions.md  testers.md  validation.md  vitals.md
examples/: update_credentials.py
src/play_store_mcp/: __init__.py  __main__.py  client.py  models.py  server.py
tests/: TESTING.md  __init__.py  conftest.py  run_integration_tests.sh  run_tests.sh  test_app_recovery.py  test_audit_fixes.py  test_client.py  test_client_extended.py  test_credentials_endpoint.py  test_data_safety.py  test_device_tier_configs.py  test_edit_uploads.py  test_external_transactions.py  test_generated_apks.py  test_inappproducts.py  test_integration.py  test_integration_credentials.py  test_internal_app_sharing.py  test_listing_images.py  test_live_api.py  test_models.py  test_onetimeproduct_offers.py  test_onetimeproducts.py  test_product_purchases.py  test_purchase_management.py  test_read_only.py  test_read_siblings.py  test_server.py  test_server_extended.py  test_subscription_baseplans.py  test_subscription_catalog.py  test_subscription_offers.py  test_system_apks.py  test_users_grants.py
