[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "play-store-mcp"
version = "0.1.0"
description = "MCP server for Google Play Developer API - deploy apps, manage releases, reviews, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Play Store MCP Contributors" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "google-play",
    "android",
    "play-store",
    "developer-api",
    "app-deployment"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.9.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.36.0",
    "pydantic>=2.10.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-google-cloud-ndb>=2.3.0",
]

[project.scripts]
play-store-mcp = "play_store_mcp:main"

[project.urls]
Homepage = "https://github.com/play-store-mcp/play-store-mcp"
Documentation = "https://github.com/play-store-mcp/play-store-mcp#readme"
Repository = "https://github.com/play-store-mcp/play-store-mcp"
Issues = "https://github.com/play-store-mcp/play-store-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/play_store_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["play_store_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = false
warn_return_any = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
show_error_codes = true
files = ["src/play_store_mcp"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "google.oauth2.*",
    "google.auth.*",
    "mcp.*",
]
ignore_missing_imports = true
disable_error_code = ["no-untyped-call"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/play_store_mcp"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
